<resources>
    <string name="map_id">fd777306e29efa47</string>
    <string name="title_home">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="search_hint">Where To</string>
    <string name="medical">Medical</string>
    <string name="events">Events</string>
    <string name="outdoors">Outdoors</string>
    <string name="stores">Stores</string>
    <string name="restaurants">Restaurants</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>

</resources>